SECIT-73: Removed now-unused stuff, incl TestServerConfig