@@ -202,25 +202,6 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.16</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<argLine>-XX:MaxPermSize=200m -Xms64m -Xmx256m</argLine>
-					<includes>
-						<include>**/*IT.class</include>
-					</includes>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
